--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "autoprefixer": "^10.4.19",
     "framer-motion": "^11.3.8",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "postcss": "^8.4.39",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.6"
   },
   "devDependencies": {
