--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "^10.4.19",
     "framer-motion": "^11.3.8",
     "next": "14.2.5",
